--- a/Pertemuan_1.ipynb
+++ b/Pertemuan_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7R6LcQ0w+jeO8oeYkQGW1",
+      "authorship_tag": "ABX9TyN3ykhPbF1P+TLhktTgWDe4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uWJLbU9f8F1D",
-        "outputId": "70162b3a-748c-42f0-c38b-a02ab3f5a0c3"
+        "outputId": "e8ccf8f5-e730-4000-b4dc-8c05b0074392"
       },
       "outputs": [
         {
@@ -46,7 +46,11 @@
             "RPE\n",
             "3\n",
             "Pemograman Dasar\n",
-            "False\n"
+            "False\n",
+            "Kristen\n",
+            "('futsal', 'traveling')\n",
+            "2\n",
+            "Belum Kawin\n"
           ]
         }
       ],
@@ -57,13 +61,22 @@
         "semester = 3\n",
         "matakuliah = 'Pemograman Dasar'\n",
         "status_lulus = False\n",
+        "agama = \"Kristen\"\n",
+        "hobby = 'futsal', 'traveling'\n",
+        "jumlah_saudara = 2\n",
+        "status_perkawinan = \"Belum Kawin\"\n",
+        "\n",
         "\n",
         "print (nama)\n",
         "print (umur)\n",
         "print (jurusan)\n",
         "print (semester)\n",
         "print (matakuliah)\n",
-        "print (status_lulus)\n"
+        "print (status_lulus)\n",
+        "print (agama)\n",
+        "print (hobby)\n",
+        "print (jumlah_saudara)\n",
+        "print (status_perkawinan)"
       ]
     }
   ]
